# mipt

./: README.md
Адаптационный курс/notebooks/: _04. Functions.ipynb  python.ipynb
Адаптационный курс/Дз к теме 2.1/: solution.ipynb
Адаптационный курс/Дз к теме 2.2/: solution.ipynb
Адаптационный курс/Дз к теме 3/: solution.ipynb
Алгоритмы и структуры данных/10/: solution.ipynb
Алгоритмы и структуры данных/11/: solution.py
Алгоритмы и структуры данных/12/: solution.py
Алгоритмы и структуры данных/13/: solution.py
Алгоритмы и структуры данных/2/: solution.ipynb
Алгоритмы и структуры данных/5/: solution.py
Алгоритмы и структуры данных/6/: solution.py
Алгоритмы и структуры данных/8/: solution.py
Алгоритмы и структуры данных/mock-payment-service/: Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
Алгоритмы и структуры данных/mock-payment-service/app/: main.py
Алгоритмы и структуры данных/mock-payment-service/app/api/: payment.py
Алгоритмы и структуры данных/mock-payment-service/app/core/: logging.py
Алгоритмы и структуры данных/mock-payment-service/app/repositories/: payment.py
Алгоритмы и структуры данных/mock-payment-service/app/schemas/: payment.py
Алгоритмы и структуры данных/mock-payment-service/app/services/: payment_service.py
Алгоритмы и структуры данных/mock-payment-service/tests/unit/: test_unit.py
Алгоритмы и структуры данных/pay_service/: pyproject.toml
Дз к теме 1/: Дз к теме 1.ipynb
Язык Python для разработчиков/Аннотации типов/: solution.ipynb
Язык Python для разработчиков/ООП/: solution.py
(+12 files in other folders)
